# learngl

./: CMakeLists.txt  ReadMe.md  make.cmd  run.cmd
cmake/: find_glew.cmake  find_glfw3.cmake
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/intern/: main.cpp
source/window/: CMakeLists.txt  window.hpp
source/window/intern/: window.cpp
